<?xml version="1.0"?>
<package>
  <name>tp_ros_visual_servo</name>
  <version>1.0.0</version>
  <description>Travaux pratiques pour implémenter un asservissement visuel</description>

  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>
  <license>BSD</license>
  <url type="website">http://homepages.laas.fr/ostasse/Teaching/ROS/rosintro.pdf</url>

  <author email="ostasse@laas.fr">Olivier Stasse</author>

  <build_depend>message_generation</build_depend>
   <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
  </export>
  
</package>
